--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,3 +40,22 @@ form button:hover{
     background: #514211;
     color: white;
 }
+.todo-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.todo-list{
+    min-width: 30%;
+    list-style: none;
+}
+
+.todo{
+    margin: 0.5rem;
+    background-color: rgb(255, 255, 255);
+    color: black;
+    display: flex;
+    font-size: 1.5rem;
+    justify-content: space-between;
+    align-items: center;
+}
