--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,7 +13,7 @@ body{
 }
 
 header{
-    font-size: 1.5rem;
+    font-size: 1rem;
 
 }
 header, form{
@@ -23,11 +23,10 @@ header, form{
     align-items: center;
 }
 form input, form button{
-    padding: 0.5rem;
-    font-size: 2rem;
+    padding: .5rem;
+    font-size: 1rem;
     border: none;
     background: white;
-    border-radius: .4rem;
     max-width: 80%;
 }
 form button{
@@ -47,7 +46,7 @@ form button:hover{
     align-items: center;
 }
 .todo-list{
-    min-width: 50%;
+    min-width: 30%;
     list-style: none;
 }
 
@@ -60,6 +59,7 @@ form button:hover{
     justify-content: space-between;
     align-items: center;
     transition: all 1s ease;
+    border-radius: 12px;
 }
 
 .todo li{
