Remove element animation

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -88,3 +88,7 @@ form button:hover{
     text-decoration: line-through;
     opacity: 0.5;
 }
+.fall{
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity: 0;
+}
